<resources>
    <string name="app_name_en">OPENCAR</string>
    <string name="app_name">开车币用</string>
    <string name="action_settings">Settings</string>
    <string name="link_ufn">请先连接设备Wi-Fi</string>
    <string name="menu_map">地图</string>
    <string name="menu_msg">资讯</string>
    <string name="menu_contact">帮友圈</string>
    <string name="menu_community">社区</string>
    <string name="menu_me">我</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscription">订阅</string>
    <string name="subscribed">已订阅</string>
    <string name="column_tip">%s车友正堵在路上</string>
    <string name="column_subscribed">你的好友“%s”已关注</string>
    <string name="group_chat">群聊</string>
    <string name="publish">发送</string>
    <string name="dynamic">动态</string>
    <string name="popular">热门</string>

    <string name="likes_yes">已经点赞</string>
    <string name="input_tips">请输入内容</string>
    <string name="likes_success">点赞成功</string>
    <string name="likes_failded">点赞失败</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failded">评论失败</string>

    <string name="ugc_event_new">+ 新建活动</string>

    <string name="ugc_share_weixin">分享微信</string>
    <string name="ugc_share_pengyouquan">分享朋友圈</string>
    <string name="ugc_share_weibo">分享微博</string>
    <string name="ugc_share_qunzu">分享群组</string>

    <string name="ugc_save_pic">保存照片</string>
    <string name="ugc_complain">投诉</string>
    <string name="ugc_delete">删除</string>

    <string name="album_select">从相册选择</string>
    <string name="photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="release_dynamics">发动态</string>
    <string name="release">发布</string>
    <string name="success">完成</string>
    <string name="camera_roll">相机胶卷</string>
    <string name="position">位置信息</string>
    <string name="select_photo_max_num">最多可以选择%d张图片</string>
    <string name="publish_detail_tips">请输入内容</string>

    <string name="release_dynamics_success">发布成功</string>
    <string name="release_dynamics_failed">发布失败</string>
    <string name="loading_data">正在上传数据</string>
    <string name="loading_tips">如果图片太大，上传需要一点时间！</string>

    <string name="car_coin">CAR币</string>
    <string name="rmb_tab">现金</string>
    <string name="vehicle_tools">车主工具</string>
    <string name="vehicle_service">车辆服务</string>
    <string name="vehicle_add">添加您的爱车</string>
    <string name="vehicle_add_info">添加车辆查违章</string>
    <string name="vehicle_rules_service">享受最新违章查询，在线办理服务</string>
    <string name="limit_row">限行尾号</string>
    <string name="vehicle_rules">查违章</string>
    <string name="vehicle_shear">违章查询</string>
    <string name="limit_row_today">今日限行</string>
    <string name="oil_price_today">今日油价</string>
    <string name="plate_number">车牌号码</string>
    <string name="input_plate_number">请输入车牌号码</string>
    <string name="engine_number">发动机号</string>
    <string name="inputg_engine_number">请输入发动机号</string>
    <string name="frame_number">车架号</string>
    <string name="input_frame_number">请输入17位车架号</string>
    <string name="brand_car">品牌类型</string>
    <string name="brand_car_select_tip">点击选择品牌型号</string>
    <string name="vehicle_number_message">您有 %d 条违章信息，点击查看>></string>

    <string name="vehicle_number_message_no">当前没有违章记录</string>
    <string name="violation_address">违章地点</string>
    <string name="violation_wherefore">违章原因</string>
    <string name="buckle">%s分</string>
    <string name="penalty">%s元</string>
    <string name="vehicle_number">%d笔</string>
    <string name="buckle_fraction">扣%d分</string>
    <string name="penalty_num">共%d元</string>
    <string name="vip_shop">会员电商</string>

    <string name="my_invitation_code">我的邀请码</string>
    <string name="my_order">我的订单</string>
    <string name="address_management">地址管理</string>
    <string name="customer_service">客服电话</string>
    <string name="sign_out">退出登录</string>
    <string name="sign_out_success">退出登录成功</string>
    <string name="sign_out_failded">退出登录失败</string>
    <string name="add_car">添加车辆</string>
    <string name="push_activity">发活动</string>
    <string name="next_step">下一步</string>
    <string name="activity_name">活动名称</string>
    <string name="resort">集合地</string>
    <string name="activity_start_time">开始日期</string>
    <string name="activity_stop_time">结束日期</string>
    <string name="deadline_registration">报名截止日期</string>
    <string name="maximum_registrations">最多报名数</string>
    <string name="upload_wechat_group_code">上传微信群组二维码</string>
    <string name="deadline_registration_tips">用户报名时将扫描码加入微信群，请注意微信群组二维码有效期</string>
    <string name="activity_input_tip">请补全信息</string>
    <string name="activity_input_failed_1">结束日期不能小于开始日期</string>
    <string name="activity_input_failed_2">截止日期不能大于开始日期</string>


    <string name="police_road_inspection">交警路检</string>
    <string name="violation_sticker">违规贴条</string>
    <string name="free_parking">免费停车</string>
    <string name="police_taking_pictures">交警拍照</string>
    <string name="traffic_accident">交通事故</string>
    <string name="severe_congestion">严重拥堵</string>
    <string name="road_condition_voice_tip">如果发现当前位置有%s，请上报！</string>

    <string name="input_mobile">请输入手机号</string>
    <string name="input_verifi_code">请输入验证码</string>
    <string name="mobile_verrf_code_empty">手机号或者验证码不能为空</string>
    <string name="create_account">未注册过的手机将自动创建为OPENCAR账户</string>
    <string name="login">登录</string>
    <string name="bind_mobile">绑定</string>
    <string name="get_verifi_code">获取验证码</string>
    <string name="login_account">账号登陆</string>
    <string name="confirm">确定</string>
    <string name="event_ellipsize">活动详情></string>
    <string name="feed_ellipsize">全文></string>
    <string name="save">保 存</string>
    <string name="personal_avatar">头像</string>
    <string name="personal_avatar_modify">修改头像</string>
    <string name="personal_nick_name">昵称</string>
    <string name="input_personal_nick_name">请输入昵称</string>
    <string name="personal_age">年龄</string>
    <string name="personal_gender">性别</string>
    <string name="personal_profile">个人资料</string>
    <string name="gender_man">男</string>
    <string name="gender">女</string>
    <string name="poi_nearest">&#160;&#160;&#160;距离最近</string>
    <string name="search_empty">暂无搜索结果</string>

    <string name="my_group_create_tip">创建群拿积分啦~</string>
    <string name="my_group_create">马上创建~</string>

    <string name="my_group_login_tip">登录后查看群消息~</string>
    <string name="my_group_login">马上登录~</string>


    <string name="poi_type_home">家</string>
    <string name="poi_type_company">公司</string>

    <string name="create_group">创建群聊</string>
    <string name="group_name">群名称</string>
    <string name="group_name_tip">必填(2-14个字)</string>
    <string name="group_content">群介绍</string>
    <string name="group_content_tip">必填(说说为什么要建这个群，最少4个字)</string>

    <string name="select_lable">选择标签</string>
    <string name="select_province">选择省份</string>
    <string name="select_city_title">选择城市</string>
    <string name="select_car_system_title">选择车系</string>
    <string name="select_car_style">选择品牌</string>
    <string name="city">城市</string>
    <string name="select_city">请选择城市</string>
    <string name="car_system">车系</string>
    <string name="select_car_system">请选择车系</string>
    <string name="group_tab">群标签</string>
    <string name="select_group_tab">选择群标签更容易被车友发现</string>
    <string name="group_rule">群规则</string>
    <string name="group_rule_tip">选填(您可输入群规则，新成员入群可见)</string>
    <string name="group_list_title">群成员(%s/2000)</string>
    <string name="group_data_management">群资料管理</string>
    <string name="group_management">群管理</string>
    <string name="settings">设置</string>

    <string name="ugc_group_not_create">你还没有创建群哦～</string>


    <string-array name="my_group_tag">
        <item>全部</item>
        <item>我创建的</item>
    </string-array>

    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="complain">Complain</string>
    <string name="recall">Recall</string>
</resources>
