<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.activity.dynamic.ReleaseActivity">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textColor="@color/color_272D32"
            android:textSize="@dimen/text_size_15_sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/camera_roll"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_17_sp" />

        <TextView
            android:id="@+id/release"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/events_new"
            android:gravity="center"
            android:text="@string/success"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15_sp" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recyclerviw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
</RelativeLayout>