<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.activities.ReleaseActivitiesActivity">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_car"
            android:textColor="@color/color_0C0C0C"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/next_step"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15_sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_15"
            android:layout_marginRight="@dimen/dimen_15"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/car_num_lay"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:background="@color/color_FAFCFF"
                android:padding="6dp">

                <TextView
                    android:id="@+id/plate_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/plate_number"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_15_sp" />
                <TextView
                    android:id="@+id/car_num_tv"
                    android:layout_toRightOf="@id/plate_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="*"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_15_sp" />

                <TextView
                    android:id="@+id/province"
                    android:layout_toRightOf="@id/car_num_tv"
                    android:layout_marginLeft="15dp"
                    android:layout_width="30dp"
                    android:layout_height="21dp"
                    android:layout_centerVertical="true"
                    android:text="京"
                    android:gravity="center"
                    android:background="@color/color_3342DC"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_12_sp" />

                <EditText
                    android:id="@+id/car_num_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@id/province"
                    android:background="@null"
                    android:maxLength="6"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/input_plate_number"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/text_size_15_sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/engine_number_lay"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:background="@color/color_FAFCFF"
                android:padding="6dp">

                <TextView
                    android:id="@+id/engine_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/engine_number"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_15_sp" />
                <TextView
                    android:id="@+id/engine_number_tip"
                    android:layout_toRightOf="@id/engine_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="*"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_15_sp" />
                <EditText
                    android:id="@+id/engine_numbery_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@id/engine_number_tip"
                    android:background="@null"
                    android:ellipsize="start"
                    android:hint="@string/inputg_engine_number"
                    android:singleLine="true"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/text_size_15_sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_name_lay"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:background="@color/color_FAFCFF"
                android:padding="6dp">

                <TextView
                    android:id="@+id/frame_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/frame_number"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_15_sp" />
                <TextView
                    android:id="@+id/activity_name_tip"
                    android:layout_toRightOf="@id/frame_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="*"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_15_sp" />
                <EditText
                    android:id="@+id/activity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@id/activity_name_tip"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:background="@null"
                    android:ellipsize="start"
                    android:hint="@string/input_frame_number"
                    android:singleLine="true"
                    android:maxLength="17"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/text_size_15_sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/brand_type_lay"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:background="@color/color_FAFCFF"
                android:visibility="gone"
                android:padding="6dp">

                <TextView
                    android:id="@+id/brand_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/brand_car"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_15_sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/brand_car_select_tip"
                    android:layout_centerInParent="true"
                    android:textColor="@color/color_C3C3C3"
                    android:textSize="@dimen/text_size_15_sp" />

                <ImageView
                    android:id="@+id/hm_icon_buckle"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/wallet_right" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_below="@+id/tv_tips"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_40"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginLeft="@dimen/dimen_16"
                android:background="@drawable/login_sigin_bg"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size17" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>